hopefull fixed pie chart alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,9 +85,11 @@ polyline{
 	fill: none;
 }
 
-.vis {
-	margin:auto;
-	width: 80%;
+
+.header-div
+{
+	width : 80%;
+	margin: auto;
 }
 
 #school1 {
